--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Coustard|Vollkorn" rel="stylesheet">
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
@@ -20,21 +20,53 @@
         <h1>¡VOLVEMOS EL 16 DE FEBRERO!</h1>
         <h2>¡Reserva ya tus entradas!</h2>
     </div>
-    <div data-aos="fade-down-right" class="uno">
-        <p>Prepárate para vivir una experiencia inolvidable</p><img src="img/african_lion_king-wide.jpg"></div>
-    <div date-aos="fade-right" class="tres">
-    <p>Pase de Temporada 2018</p>
-    <p>Ven todos los días a Selwo Aventura, Selwo Marina y Teleférico Belnalmádena con el Pase de Temporada.</p></div>
-    <div data-aos="fade-left" class="dos">
-        <p> <i class="fa fa-ticket" aria-hidden="true"></i>Reserva aquí tus entradas</p>
-        <form>
-            Nombre:<input type="text"><br> Apellidos:
-            <input type="text"><br> DNI:
-            <input type="text"><br> Correo electrónico:<input type="email"><br> Día de reserva<input type="date"><br> Modo de pago<input type="text"><br>
-            <input type="submit">
-        </form>
+    <div class="padre">
+        <div data-aos="fade-down-right" class="uno">
+        </div>
+        <div data-aos="fade-down-right" class="subuno">
+            <p>Vive la naturaleza salvaje</p>
+        </div>
     </div>
-
+    <div class="padredos">
+        <div data-aos="fade-down-left" class="dos">
+        </div>
+        <div data-aos="fade-down-left" class="subdos">
+            <p><strong>¡Actividades!</strong></p>
+            <p>Te proponemos vivir una gran aventura en África con el más completo programa de actividades, presentaciones y charlas.</p>
+        </div>
+    </div>
+    <div class="padre3">
+        <div data-aos="fade-right" class="tres">
+        </div>
+        <div data-aos="fade-left" class="subtres">
+            <p><strong>Pase de Temporada 2018</strong></p>
+            <p>Ven todos los días a Selwo Aventura, Selwo Marina y Teleférico Belnalmádena con el Pase de Temporada.</p>
+        </div>
+    </div>
+    <div class="padre4">
+        <div data-aos="fade-left" class="cuatro">
+        </div>
+        <div class="subcuatro">
+            <h3> <i class="fas fa-ticket-alt"></i>Reserva aquí tus entradas</h3>
+            <form>
+                <p>Nombre:<input type="text"></p>
+                <p>Apellidos:
+                    <input type="text"></p>
+                <p>DNI:
+                    <input type="text"></p>
+                <p> Correo electrónico: <input type="email"></p>
+                <p>Día de reserva: <input type="date"></p>
+                <p>Modo de pago: <input type="text"></p>
+                <p><input type="submit"></p>
+            </form>
+        </div>
+    </div>
+    <div class="padre5">
+        <div data-aos="fade-up-right" class="cinco">
+        </div>
+        <div class="subcinco">
+            <p>¿Tienes alguna duda? Mándanos un correo a: <p>selwo@selwo.es</p> ¡y te responderemos lo antes posible!</p>
+    </div>
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="index.js"></script>
 
