--- a/index.html
+++ b/index.html
@@ -21,33 +21,33 @@
         <h2>¡Reserva ya tus entradas!</h2>
     </div>
     <div class="padre">
-        <div data-aos="fade-down-right" class="uno">
+        <div data-aos="zoom-out-down" data-aos-duration="700" class="uno">
         </div>
-        <div data-aos="fade-down-right" class="subuno">
+        <div data-aos="zoom-out-down" data-aos-duration="700" class="subuno">
             <p>Vive la naturaleza salvaje</p>
         </div>
     </div>
     <div class="padredos">
-        <div data-aos="fade-down-left" class="dos">
+        <div data-aos="zoom-out-right" data-aos-duration="700" class="dos">
         </div>
-        <div data-aos="fade-down-left" class="subdos">
+        <div data-aos="zoom-out-left" data-aos-duration="700" class="subdos">
             <p><strong>¡Actividades!</strong></p>
             <p>Te proponemos vivir una gran aventura en África con el más completo programa de actividades, presentaciones y charlas.</p>
         </div>
     </div>
     <div class="padre3">
-        <div data-aos="fade-right" class="tres">
+        <div data-aos="zoom-in-right" data-aos-duration="700" class="tres">
         </div>
-        <div data-aos="fade-left" class="subtres">
+        <div data-aos="zoom-in-left" data-aos-duration="700" class="subtres">
             <p><strong>Pase de Temporada 2018</strong></p>
             <p>Ven todos los días a Selwo Aventura, Selwo Marina y Teleférico Belnalmádena con el Pase de Temporada.</p>
         </div>
     </div>
     <div class="padre4">
-        <div data-aos="fade-left" class="cuatro">
-        </div>
-        <div class="subcuatro">
+        <div data-aos="zoom-in-left" data-aos-duration="700" class="cuatro">
             <h3> <i class="fas fa-ticket-alt"></i>Reserva aquí tus entradas</h3>
+        </div>
+        <div data-aos="zoom-in-right" data-aos-duration="700" class="subcuatro">
             <form>
                 <p>Nombre:<input type="text"></p>
                 <p>Apellidos:
@@ -62,14 +62,16 @@
         </div>
     </div>
     <div class="padre5">
-        <div data-aos="fade-up-right" class="cinco">
+        <div data-aos="fade-up-right" data-aos-duration="700" class="cinco">
         </div>
-        <div class="subcinco">
-            <p>¿Tienes alguna duda? Mándanos un correo a: <p>selwo@selwo.es</p> ¡y te responderemos lo antes posible!</p>
+        <div data-aos="fade-up-left" data-aos-duration="700" class="subcinco">
+            <p>¿Tienes alguna duda? Mándanos un correo a:</p>
+            <p><strong>selwo@selwo.es</strong></p>
+            <p>¡y te responderemos lo antes posible!</p>
+        </div>
     </div>
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <script src="index.js"></script>
-
 </body>
 
 </html>
