Terminado (fixed some animations)

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
         <h2>¡Reserva ya tus entradas!</h2>
     </div>
     <div class="padre">
-        <div data-aos="zoom-out-down" data-aos-duration="700" class="uno">
+        <div data-aos="zoom-in" data-aos-duration="700" class="uno">
         </div>
-        <div data-aos="zoom-out-down" data-aos-duration="700" class="subuno">
+        <div data-aos="zoom-in" data-aos-duration="700" class="subuno">
             <p>Vive la naturaleza salvaje</p>
         </div>
     </div>
     <div class="padredos">
-        <div data-aos="zoom-out-right" data-aos-duration="700" class="dos">
+        <div data-aos="fade-up" data-aos-duration="700" class="dos">
         </div>
-        <div data-aos="zoom-out-left" data-aos-duration="700" class="subdos">
+        <div data-aos="fade-down" data-aos-duration="700" class="subdos">
             <p><strong>¡Actividades!</strong></p>
             <p>Te proponemos vivir una gran aventura en África con el más completo programa de actividades, presentaciones y charlas.</p>
         </div>
@@ -62,9 +62,9 @@
         </div>
     </div>
     <div class="padre5">
-        <div data-aos="fade-up-right" data-aos-duration="700" class="cinco">
+        <div data-aos="zoom-in-right" data-aos-duration="700" class="cinco">
         </div>
-        <div data-aos="fade-up-left" data-aos-duration="700" class="subcinco">
+        <div data-aos="zoom-in-left" data-aos-duration="700" class="subcinco">
             <p>¿Tienes alguna duda? Mándanos un correo a:</p>
             <p><strong>selwo@selwo.es</strong></p>
             <p>¡y te responderemos lo antes posible!</p>
